# ai-assisted-dev-template

./: AGENTS.md  CLAUDE.md  README.md  build.gradle  index.html  package-lock.json  package.json  pyproject.toml  settings.gradle  vite.config.ts
.claude/: ORCHESTRATION.md  settings.json
.claude/agents/: codex-task-writer.md
.claude/commands/: review-local-pr.md
.claude/hooks/: docs-consistency-check.sh  pre-implementation-check.sh  pre-pr-check.sh  protected-files-check.sh
.codex/: CODEX_ORCHESTRATION.md  CODEX_SETUP_NOTES.md  CODEX_TASK_PACKET_TEMPLATE.md  instructions.md
.codex/agents/: bugfix-worker.toml  feature-worker.toml  refactor-worker.toml  test-debugger.toml
.codex/prompts/: fix-ci-failure.md  respond-to-local-review.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: main.py
docs/agent/: autonomy-levels.md
docs/decisions/: ADR-002-use-manual-codex-execution-instead-of-nested-codex-exec.md  ADR-003-allow-claude-code-to-invoke-codex-exec.md  README.md
docs/designs/: README.md
docs/failures/: FAILURE-001-nested-codex-exec-sandbox-conflict.md  README.md
docs/feedback/: README.md  dogfooding-plan.md  dogfooding-spring-boot-version-endpoint.md
docs/harness/: README.md  agent-role-policy.md  autonomy-levels.md  branch-strategy.md  completion-commit-policy.md  design-record-policy.md  feedback-loop-policy.md  handoff-policy.md  human-gate-policy.md  local-review-policy.md  skill-usage-policy.md
docs/knowledge/: README.md  orchestrator-comparison.md  workflow.md  (+1 more)
src/: App.test.tsx  App.tsx
tests/: test_health.py
(+7 files in other folders)
