[project]
name = "template"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
